# inforce

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
inforce/: .env  conftest.py  manage.py  start.sh
inforce/authentication/: managers.py  models.py
inforce/authentication/api/v1/: serializers.py  urls.py  views.py
inforce/authentication/tests/: test_authentication_api_v1.py
inforce/inforce/: asgi.py  settings.py  urls.py  wsgi.py
inforce/restaurant/: models.py  signals.py
inforce/restaurant/api/v1/: serializers.py  services.py  urls.py  views.py
inforce/restaurant/tests/: test_restaurant_api_v1.py
